--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "body-parser": "^1.19.0",
     "client": "file:client",
     "concurrently": "^5.0.0",
+    "dotenv": "^8.2.0",
+    "dotenv-safe": "^8.1.0",
     "express": "^4.17.1",
+    "express-pino-logger": "^4.0.0",
     "google-maps-react": "^2.0.2",
+    "http-proxy-middleware": "^0.20.0",
     "is-empty": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "materialize-css": "^1.0.0",
@@ -23,9 +27,11 @@
     "passport-jwt": "^4.0.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
+    "react-google-maps": "^9.4.5",
     "react-materialize": "^3.4.1",
     "react-scripts": "3.2.0",
     "serve-favicon": "^2.5.0",
+    "twilio": "^3.37.1",
     "validator": "^12.0.0"
   },
   "scripts": {
