--- a/package.json
+++ b/package.json
@@ -1,40 +1,8 @@
 {
   "name": "foodheros",
-  "version": "0.1.0",
+  "version": "1.0.0",
+  "description": "",
   "main": "server.js",
-  "engines": {
-    "node": "12.13.0"
-  },
-  "private": true,
-  "dependencies": {
-    "@material-ui/core": "^4.6.0",
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.19.0",
-    "client": "file:client",
-    "concurrently": "^5.0.0",
-    "dotenv": "^8.2.0",
-    "dotenv-safe": "^8.1.0",
-    "express": "^4.17.1",
-    "express-pino-logger": "^4.0.0",
-    "google-maps-react": "^2.0.2",
-    "http-proxy-middleware": "^0.20.0",
-    "is-empty": "^1.2.0",
-    "jsonwebtoken": "^8.5.1",
-    "materialize-css": "^1.0.0",
-    "mongodb": "^3.3.4",
-    "mongoose": "^5.7.10",
-    "morgan": "^1.9.1",
-    "passport": "^0.4.0",
-    "passport-jwt": "^4.0.0",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
-    "react-google-maps": "^9.4.5",
-    "react-materialize": "^3.4.1",
-    "react-scripts": "3.2.0",
-    "serve-favicon": "^2.5.0",
-    "twilio": "^3.37.1",
-    "validator": "^12.0.0"
-  },
   "scripts": {
     "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
     "start:prod": "node server.js",
@@ -45,22 +13,22 @@
     "build": "cd client && npm run build",
     "heroku-postbuild": "npm run build"
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "nodemon": "^1.19.4"
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "concurrently": "^5.0.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-pino-logger": "^4.0.0",
+    "is-empty": "^1.2.0",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.3.4",
+    "mongoose": "^5.7.11",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
+    "twilio": "^3.37.1",
+    "validator": "^12.0.0"
   }
 }
