--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "homepage" : "https://protected-refuge-22626.herokuapp.com/",
   "dependencies": {
     "@material-ui/core": "^4.6.1",
     "axios": "^0.19.0",
