--- a/client/package.json
+++ b/client/package.json
@@ -2,20 +2,25 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://protected-refuge-22626.herokuapp.com/",
+  "homepage": "https://ghastly-werewolf-16606.herokuapp.com/",
   "dependencies": {
     "@material-ui/core": "^4.6.1",
+    "@material-ui/icons": "^4.5.1",
     "axios": "^0.19.0",
+    "build": "^0.1.4",
     "classnames": "^2.2.6",
+    "http-proxy-middleware": "^0.20.0",
+    "is-empty": "^1.2.0",
     "jwt-decode": "^2.2.0",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-google-maps": "^9.4.5",
-    "react-materialize": "^3.4.1",
     "react-modal": "^3.11.1",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
+    "react-scripts": "^3.2.0",
+    "recompose": "^0.30.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0"
   },
@@ -23,7 +28,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -39,5 +46,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.1.1"
   }
 }
